done with hero section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>Comfort Food Directory | Food is the best comforter!</title>
   </head>
   <body>
-    <div class="nav-wrapper">
+    <div class="nav-wrapper lato">
       <div class="container-fluid top-most-nav fs-12 fw-700">
         <div class="container-xl mx-auto">
             <nav class="navbar navbar-expand-sm navbar-light">
@@ -50,26 +50,25 @@
         </div>
       </div>
 
-      <div class="container-fluid bg-light">
+      <div class="container-fluid bg-light lato">
         <div class="container-xl mx-auto">
-          <nav class="navbar navbar-light bg-light d-flex justify-content-center justify-content-md-between">
+          <nav class="navbar py-3 navbar-light bg-light d-flex justify-content-center justify-content-md-between">
             <a class="navbar-brand"><img src="img/logo.jpg" class="img-fluid" alt="comfort-food-directory"></a>
             <form action="" class="form-inline" id="submit">
               <input class="form-control mr-0 mr-sm-2" type="text" id="search" placeholder="Favorite confort food?" aria-label="Search">
               <button class="btn my-2 my-sm-0 mx-auto mx-sm-0" type="submit"><i class="fas fa-search text-success"></i></button>
             </form>
           </nav>
-          
         </div>
       </div>
     </div>
     
-    <div class="container-xl mx-auto">  
+    <div class="container-xl mx-auto lato">  
 
       <div class="row hero d-flex align-items-center text-light">
         <div class="site-intro px-4 pt-5">
-          <h1 class="fs-26">Comfort Food Directory</h1>
-          <p>Comfort food is the food that makes us feel good – satisfied, calm, cared for and carefree. 
+          <h1 class="fs-26 merienda">Comfort Food Directory</h1>
+          <p class="lh-30">Comfort food is the food that makes us feel good – satisfied, calm, cared for and carefree. 
             It’s food that fills us up emotionally and physically. Finding comfort in food is a basic human experience.</p>
         </div>
       </div><!-- hero -->
