--- a/index.html
+++ b/index.html
@@ -73,15 +73,24 @@
         </div>
       </div><!-- hero -->
 
-      <div class="row"> 
-
-        <div id="result-heading"></div>
-        <div id="meals" class="meals list"></div>
-        <div id="single-meal"></div>
-
-      </div><!-- row -->
-
     </div><!-- container-xl mx-auto -->
+
+    <div class="container-fluid">
+
+      <div class="w-100 text-center" id="result-heading"></div>
+
+    </div>
+
+    <div class="container-fluid">
+      <div class="container-xl mx-auto">
+        <div class="row"> 
+
+          <div id="meals" class="meals d-flex justify-content-center flex-wrap"></div>
+          <div id="single-meal"></div>
+  
+        </div><!-- row -->
+      </div>
+    </div>
 
     <!-- Custom JS -->
     <script src="js/main.js"></script>
