--- a/index.html
+++ b/index.html
@@ -86,9 +86,27 @@
         <div class="row"> 
 
           <div id="meals" class="meals d-flex justify-content-center flex-wrap"></div>
-          <div id="single-meal"></div>
   
         </div><!-- row -->
+      </div>
+    </div>
+
+    <!-- Modal -->
+
+    
+
+
+    <div class="modal fade mt-300" id="mealInfo" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+
+          <div id="single-meal"></div>
+
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
       </div>
     </div>
 
