--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <title>Comfort Food Directory | Food is the best comforter!</title>
   </head>
   <body>
+
     <div class="nav-wrapper lato">
       <div class="container-fluid top-most-nav fs-12 fw-700">
         <div class="container-xl mx-auto">
@@ -33,16 +34,19 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
                   <li class="nav-item inline-block">
-                    <a class="nav-link" href="https://www.themealdb.com/"><i class="fas fa-cheese"></i> TheMealDB API</a>
+                    <a class="nav-link" target="_blank" href="https://www.themealdb.com/"><i class="fas fa-cheese"></i> TheMealDB API</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fas fa-video"></i> Video Demo</a>
+                    <a class="nav-link" target="_blank" href="demo-video-comfort-food-directory/comfort-food-directory.html"><i class="fas fa-video"></i> Video Demo</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="https://fb.com/ramonito.omandam"><i class="fab fa-facebook"></i> Facebook</a>
+                    <a class="nav-link" target="_blank" href="https://fb.com/ramonito.omandam"><i class="fab fa-facebook"></i> Facebook</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fab fa-linkedin"></i> Linkedin</a>
+                    <a class="nav-link" target="_blank" href="https://www.linkedin.com/in/ramonitoomandam/"><i class="fab fa-linkedin"></i> Linkedin</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" target="_blank" href="https://github.com/ramonice/comfort-food-directory.git"><i class="fab fa-github-alt"></i> Github</a>
                   </li>
                 </ul>
               </div>
@@ -55,8 +59,8 @@
           <nav class="navbar py-3 navbar-light bg-light d-flex justify-content-center justify-content-md-between">
             <a class="navbar-brand"><img src="img/logo.jpg" class="img-fluid" alt="comfort-food-directory"></a>
             <form action="" class="form-inline" id="submit">
-              <input class="form-control mr-0 mr-sm-2" type="text" id="search" placeholder="Favorite confort food?" aria-label="Search">
-              <button class="btn my-2 my-sm-0 mx-auto mx-sm-0" type="submit"><i class="fas fa-search text-success"></i></button>
+              <input class="form-control mr-0 mr-sm-2" type="text" id="search" placeholder="Favorite comfort food?" aria-label="Search">
+              <button class="btn btn-outline-success my-2 my-sm-0 mx-auto mx-sm-0" type="submit"><i class="fas fa-search"></i></button>
             </form>
           </nav>
         </div>
@@ -66,7 +70,7 @@
     <div class="container-xl mx-auto lato">  
 
       <div class="row hero d-flex align-items-center text-light">
-        <div class="site-intro px-4 pt-5">
+        <div class="site-intro px-0 px-sm-4 pt-0 pt-sm-5">
           <h1 class="fs-26 merienda">Comfort Food Directory</h1>
           <p class="lh-30">Comfort food is the food that makes us feel good – satisfied, calm, cared for and carefree. 
             It’s food that fills us up emotionally and physically. Finding comfort in food is a basic human experience.</p>
@@ -91,12 +95,7 @@
       </div>
     </div>
 
-    <!-- Modal -->
-
-    
-
-
-    <div class="modal fade mt-300" id="mealInfo" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade mt-300 lato" id="mealInfo" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
 
@@ -104,9 +103,16 @@
 
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
           </div>
         </div>
+      </div>
+    </div>
+
+    <div class="container-fluid mt-5 bg-dark">
+      <div class="container-xl mx-auto">
+        <div class="row pt-5 pb-2"><img class="mx-auto mb-2" src="img/animated-beer.svg" alt=""></div> 
+        <div class="row"><p class="merienda text-white mx-auto text-center font-italic">2020 is really a hard year. Make a meal and chill, everything's gonna be fine.</p></div>
+        <div class="row"><p class="mx-auto text-light fs-12">Coded by Ramonito Nerval Omandam</p></div>
       </div>
     </div>
 
